--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -25,8 +25,8 @@
 <form action="/game" method="POST">
     <label>Insert you name</label>
     <input type="text" name="playerName">
-    <label>Insert game name</label>
-    <input type="text" name="game">
+    <label>Insert team name</label>
+    <input type="text" name="teamName">
     <button>Join / Create game</button>
 </form>
 
