--- a/views/pages/game.ejs
+++ b/views/pages/game.ejs
@@ -1,6 +1,154 @@
 <head>
     <%- include('../partials/head') %>
-  
+    <script>
+    function getCookie(name) {
+        var dc = document.cookie;
+        var prefix = name + "=";
+        var begin = dc.indexOf("; " + prefix);
+        if (begin == -1) {
+            begin = dc.indexOf(prefix);
+            if (begin != 0) return null;
+        }
+        else
+        {
+            begin += 2;
+            var end = document.cookie.indexOf(";", begin);
+            if (end == -1) {
+            end = dc.length;
+            }
+        }
+        // because unescape has been deprecated, replaced with decodeURI
+        //return unescape(dc.substring(begin + prefix.length, end));
+        return decodeURI(dc.substring(begin + prefix.length, end));
+    } 
+
+    window.addEventListener("load", function(event) {
+        var teamName = getCookie("teamName");
+        console.log(teamName)
+        if (teamName == 'host') {
+            document.getElementById('host-div').removeAttribute('hidden');
+        }
+    });
+    
+    </script>
 </head>
 <div class="containerfluid main">
+    <div class="row">
+        <!-- Team Orange page -->
+        <div class="col-6">
+            <div class="row">
+                <div class="col-12">
+                    <h3>Team orange</h3>
+                </div>
+            </div>
+            <div class="row" id="team-orange-players">
+            </div>
+<!--            <div class="row">
+                <div class="col-12">
+                    <h3>Points: 0</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <h3>Errors: 0</h3>
+                </div>
+            </div>
+            -->
+        </div>
+
+        <!-- Team blue page -->
+        <div class="col-6">
+            <div class="row">
+                <div class="col-12">
+                    <h3>Team blue</h3>
+                </div>
+            </div>
+            <div class="row" id="team-blue-players">
+            </div>
+            <!--
+            <div class="row">
+                <div class="col-12">
+                    <h3>Points: 0</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <h3>Errors: 0</h3>
+                </div>
+            </div>
+            -->
+        </div>
+    </div>
+    <div class="row">
+        <button onclick="requestManager('buzz')" id="buzz">Buzzer</button>
+    </div>
+    <div class="row">
+        <table class="table table-bordered" id="question-table">
+
+          </table>
+    </div>
+
+    <hr>
+    <div id="host-div" hidden>
+        <div class="row">
+            <div class="col-6">
+                <button onclick="requestManager('resetBuzz')">Reset buzzer</button>
+            </div>
+            <div class="col-6">
+                <button onclick="requestManager('nextQuestion')">Next question</button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-6">
+                        <input type="text">
+                        <button onclick="addPoints('orange', 1)">Give points</button>
+                    </div>
+                    <div class="col-6">
+                        <button onclick="resetErrors('orange')">Reset errors</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-6">
+                        <input type="text">
+                        <button onclick="addPoints('blue', 1)">Give points</button>
+                    </div>
+                    <div class="col-6">
+                        <button onclick="resetErrors('blue')">Reset errors</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <table class="table table-bordered" id="host-question-table">
+                <tbody>
+                    <tr>
+                        <td colspan="2">
+                            Here there is the question about something
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Answer 1<button onclick="showAnswer(0)">Show answer</button></td>
+                        <td>Answer 5<button onclick="showAnswer(4)">Show answer</button></td>
+                    </tr>
+                    <tr>
+                        <td>Answer 2<button onclick="showAnswer(1)">Show answer</button></td>
+                        <td>Answer 6<button onclick="showAnswer(5)">Show answer</button></td>
+                    </tr>
+                    <tr>
+                        <td>Answer 3<button onclick="showAnswer(2)">Show answer</button></td>
+                        <td>Answer 7<button onclick="showAnswer(6)">Show answer</button></td>
+                    </tr>
+                    <tr>
+                        <td>Answer 4<button onclick="showAnswer(3)">Show answer</button></td>
+                        <td>Answer 8<button onclick="showAnswer(7)">Show answer</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
