--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,7 +1,6 @@
 <!-- views/partials/head.ejs -->
 <meta charset="UTF-8">
-<title>Holy Sheep!</title>
-<link rel="icon" href="/images/sheep_icon.jpeg">
+<title>Family Feud!</title>
 
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
